--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1619,7 +1619,7 @@
                                     <li >Chaiyaphruek Ramintra</li>
                                     <li>(+66) 97 183 9781</li>
                                     <li>mizwwe.4455@gmail.com</li>
-                                    <li>Office Hours: 6AM - 18AM</li>
+                                    <li>Office Hours: 6AM - 18PM</li>
                                     <li>Monday - Friday</li>
                                 </div>
                             </ul>
